# myinkbird

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.committer  README.md  compose.yaml  deny.toml  export.sh  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/inkbird-collector/: Cargo.toml
crates/inkbird-collector/src/: config.rs  main.rs  ndjson_sink.rs  record.rs  scanner.rs  shutdown.rs  sink.rs  throttle.rs
crates/inkbird-core/: Cargo.toml
crates/inkbird-core/src/: lib.rs  model.rs  parser.rs
docs/: architecture.md  bluetooth.md  data-format.md
docs/adr/: 0001-record-architecture-decisions.md  0002-rust-and-btleplug.md  0003-listen-only-never-connect.md  0004-podman-and-containerfile-only.md  0005-bluetooth-via-host-bluez-dbus.md  0006-local-git-ndjson-storage.md  0007-agpl-and-dependency-policy.md  0008-slim-ci-delegating-to-bash.md  0009-always-latest-dependencies.md  0010-build-images-rootful.md  README.md
docs/llm/: dump.txt
scripts/: build.sh  ci.sh  collect-local.sh  commit-loop.sh  container-build.sh  deny.sh  install-system-deps.sh  lib.sh  lint.sh  logs.sh  run.sh  stop.sh  test.sh
